--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "magicmouse.js": "^1.2.1",
+    "mdb-vue-ui-kit": "^1.13.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
