Make webpage responsive

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
+    "autoprefixer": "10.4.5",
     "core-js": "^3.8.3",
     "magicmouse.js": "^1.2.1",
     "mdb-vue-ui-kit": "^1.13.0",
