Update Emailjs config

--- a/src/EmailjsConfig.json
+++ b/src/EmailjsConfig.json
@@ -3,7 +3,7 @@
             "account": "muhammaddallah093",
             "serviceID": "default_service",
             "templateID": "template_md-p",
-            "publicKey": "0_ilaRpHbRPu01w1f"
+            "publicKey": "0FQJehPloRxcI2zp7"
       },
       {
             "account": "mdtest093",
